--- a/juego-arena/index.html
+++ b/juego-arena/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ahorcado.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>juego-arena</title>
+    <title>juego-ahorcado</title>
   </head>
   <body>
     <div id="app"></div>
